@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.2 2001/04/21 11:23:14 wiz Exp $
+$NetBSD: distinfo,v 1.3 2003/12/14 04:08:32 xtraeme Exp $
 
-SHA1 (echoping-5.1.0.tar.gz) = 61a753c31eed1549f9c53848f37a051ddc36143d
-Size (echoping-5.1.0.tar.gz) = 99661 bytes
+SHA1 (echoping-5.2.0.tar.gz) = 21b0a92aa1760aca4c2249f0199d94f5c46e0360
+Size (echoping-5.2.0.tar.gz) = 120911 bytes
